--- a/index.html
+++ b/index.html
@@ -653,8 +653,8 @@
             
             <div class="philosophy">
                 <p><strong>Organization systems fail when they don't fit your brain.</strong></p>
-                <p>Most people try to copy someone else's way of organizing—notes, tasks, ideas—without considering how their own mind works. Then they wonder why it feels off, why they can't stick to it, and end up blaming themselves for being "disorganized."</p>
-                <p>The truth? There's no universal system. What works is <em>your</em> system—shaped by how you think, remember, and focus. Find that, and organization stops feeling like a chore.</p>
+                <p>Most people copy someone else's organizing system—notes, tasks, ideas—without considering how their own mind works. Then they wonder why it feels wrong, why they abandon it, and blame themselves for being "disorganized."</p>
+                <p>The truth? There's no universal system. What works is <em>your</em> system—shaped by how you think, remember, focus and make decisions. Find that, and organization stops feeling like a chore.</p>
                 <p>Welcome to <em>my</em> brain.</p>
             </div>
         </div>
