--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 <a href="#breakfast" class="category-link">Breakfast</a>
                 <a href="#egg-omelettes" class="category-link">Egg omelettes / muffins</a>
                 <a href="#yoghurts" class="category-link">Yoghurts</a>
+                <a href="#snacks" class="category-link">Snacks</a>
+                <a href="#cookies" class="category-link">Cookies</a>
                 <a href="#chicken" class="category-link">Chicken</a>
                 <a href="#turkey" class="category-link">Turkey</a>
                 <a href="#fish" class="category-link">Fish</a>
@@ -28,12 +30,36 @@
                 <a href="#bowls" class="category-link">Bowls</a>
                 <a href="#stews" class="category-link">Stews</a>
                 <a href="#curries" class="category-link">Curries</a>
+                <a href="#basics" class="category-link">Basic Techniques</a>
+
             </nav>
         </header>
     </div>
 
     <!-- Content Sections -->
     <main>
+        <section id="basics">
+            <h2>Basic Techniques</h2>
+            <div class="method-section">
+                <div class="method-item">⇢ Rice: 1 cup rice + 1.5 cups water; bring to boil, simmer 18 min covered, rest 10 min</div>
+                <div class="method-item">⇢ Couscous: equal parts couscous and boiling liquid; steep 5 min covered</div>
+                <div class="method-item">⇢ Quinoa: 1 cup quinoa + 2 cups water; bring to boil, simmer 15 min covered until water absorbed</div>
+                <div class="method-item">⇢ Lentils: 1 cup lentils + 3 cups water; simmer 20-25 min until tender but not mushy</div>
+                <div class="method-item">⇢ Chickpeas (dried): soak overnight, then 1-2 hours simmering until soft; or use canned, rinse and heat</div>
+                <div class="method-item">⇢ Pasta: 1L water + 10g salt per 100g pasta; boil water; add salt, pasta; cook to package time minus 1 min for al dente</div>
+                <div class="method-item">⇢ Chicken breast: 6-8 min per side until firm to touch, juices run clear</div>
+                <div class="method-item">⇢ Fish fillets: 3-4 min per side until flakes easily with fork</div>
+                <div class="method-item">⇢ Vegetables: 3-5 min boiling until tender-crisp, still bright in color</div>
+                <div class="method-item">⇢ Stock: 1 cube dissolved in 500ml hot water</div>
+            </div>
+            <div class="method-section">
+                <div class="method-item">⇢ Pan: Heat pan until oil shimmers; add protein, don't move until golden; flip once; rest 5 min before serving</div>
+                <div class="method-item">⇢ Sauce pan: Sauté aromatics in oil until fragrant; add liquid to deglaze; simmer until sauce coats spoon; add cream off heat if using</div>
+                <div class="method-item">⇢ Boiling: Salt water generously; bring to rolling boil; add vegetables, start timing when water returns to boil; drain when tender-crisp</div>
+                <div class="method-item">⇢ Steaming: 2-3 cm water in pot; place steamer basket above water; cover, steam until fork-tender</div>
+                <div class="method-item">⇢ Marinating: Acid marinades: 30 min to 2 hours max; oil-based marinades: up to overnight; always marinate in fridge</div>
+            </div>
+        </section>
         <section id="breakfast">
             <h2>Breakfast</h2>
             <div class="item-line">
@@ -184,7 +210,7 @@
             </div>
             <div class="item-line">
                 <span class="item-text">› Apricot + butter</span>
-                <span class="item-note">(pan seared)</span>
+                <span class="item-note">(sautée)</span>
             </div>
             <div class="item-line">
                 <span class="item-text">› Banana + coconut flakes</span>
@@ -201,6 +227,82 @@
             <div class="item-line">
                 <span class="item-text">› Grated apple + oats</span>
                 <span class="item-note">(fresh or overnight)</span>
+            </div>
+        </section>
+
+        <section id="snacks">
+            <h2>Snacks</h2>
+            <div class="item-line">
+                <span class="item-text">› Hummus + cucumber sticks + carrot sticks</span>
+                <span class="item-note">(fresh or air-fried)</span>
+            </div>
+            <div class="prep-section">
+                <div class="prep-item">⇢ Canned chickpeas; blend with lemon juice + olive oil + cumin + salt</div>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Yogurt + banana or nectarines or blueberries or raspberries</span>
+                <span class="item-note">(any fresh fruit, optional nut butter)</span>
+                <span class="pill">sweet</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Egg omelette</span>
+                <span class="item-note">(any variation sweet or savory)</span>
+                <span class="pill">sweet</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Mozzarella + tomato + basil</span>
+                <span class="item-note">(caprese style)</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Goat cheese + cucumber sticks + avocado</span>
+                <span class="item-note">(any fresh or air-fried vegetable)</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Cottage cheese + avocado</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Boiled eggs + tomato</span>
+            </div>
+        </section>
+
+        <section id="cookies">
+            <h2>Cookies</h2>
+            <div class="method-section">
+                <div class="method-item">⇢ Mix wet + dry; rest 15min (if oats); bake 175°C 12-15min / chill no-bake; cool</div>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Banana + oats + egg + apricots + yogurt + cinnamon + baking powder</span>
+                <span class="item-note">(sautée apricots in butter first)</span>
+                <span class="pill">rest</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Oats + mashed blueberries + egg + cinnamon + baking powder</span>
+                <span class="pill">rest</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Oats + egg + grated apple + cinnamon</span>
+                <span class="pill">rest</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Avocado + oats + egg + honey</span>
+                <span class="item-note">(optional)</span>
+                <span class="item-text">+ lemon zest</span>
+                <span class="pill">rest</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Dates + ground walnuts + oats + nut butter + pinch of sal</span>
+                <span class="item-note">(blend everything)</span>
+                <span class="pill">rest</span>
+                <span class="pill">no bake</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Tahini + oats + mashed figs + cardamom</span>
+                <span class="pill">rest</span>
+                <span class="pill">no bake</span>
+            </div>
+            <div class="item-line">
+                <span class="item-text">› Almond + orange zest + mashed dates</span>
+                <span class="pill">no bake</span>
             </div>
         </section>
 
@@ -347,10 +449,10 @@
             <h2>Minced Meat</h2>
             <div class="item-line">
                 <span class="item-text">› Passata or crushed tomato + carrots</span>
-                <span class="item-note">(optional: celery salt, oregano, splash of milk or cream) (Bolognese style)</span>
+                <span class="item-note">(optional: red bell peppers, oregano, splash of cream) (Bolognese style)</span>
                 <span class="pill">sauce pan</span>
             </div>
-            <div class="serve-section">✚ Serve: with pasta, polenta, or over mash</div>
+            <div class="serve-section">✚ Serve: solo, with pasta, polenta, or over mash</div>
             
             <div class="item-line">
                 <span class="item-text">› Tomato + rosemary + lemon zest</span>
@@ -610,6 +712,9 @@
 
         <section id="stews">
             <h2>Stews</h2>
+            <div class="method-section">
+                <div class="method-item">⇢ Brown meat in oil; add aromatics, liquid to barely cover; simmer 1-2 hours until tender, low and slow, adding vegetables in last 30 min</div>
+            </div>
             <div class="item-line">
                 <span class="item-text">› Beef ragù – sliced meat + paprika + onion + tomato + broth</span>
                 <span class="item-note">(Guláš style)</span>
@@ -627,6 +732,9 @@
 
         <section id="curries">
             <h2>Curries</h2>
+            <div class="method-section">
+                <div class="method-item">⇢ Toast spices in oil 30 sec; add aromatics, protein, cook 5 min, build heat gradually; add liquid, simmer until tender; finish with fresh herbs or lime</div>
+            </div>
             <div class="item-line">
                 <span class="item-text">› Lentil + garbanzo curry – lentils + chickpeas + coconut milk + fresh ginger + cumin</span>
             </div>
