--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookflow</title>
+    <meta name="description" content="Cookflow - A minimalist cooking reference system by Petra Gajdaczova. Modular recipe combinations organized by ingredients, not dishes.">
+    <meta name="keywords" content="Petra Gajdaczova, Cookflow, modular cooking, ingredient-based recipes, minimalist cooking, cooking reference">
+    <meta name="author" content="Petra Gajdaczova">
+
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="Cookflow - Modular Cooking Reference">
+    <meta property="og:description" content="A cooking reference system organized by ingredients, not recipes. By Petra Gajdaczova.">
+    <meta property="og:url" content="https://petratcheque.github.io/cookflow/">
+    <meta property="og:type" content="website">
+
+    <title>Cookflow - Modular Cooking Reference by Petra Gajdaczova</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
@@ -768,4 +778,20 @@
         </div>
     </footer>
 </body>
+
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Petra Gajdaczova",
+      "jobTitle": "Senior Data Analyst",
+      "email": "petra.gajdaczova@gmail.com",
+      "url": "https://petratcheque.github.io/cookflow/",
+      "sameAs": [
+        "https://es.linkedin.com/in/petra-gajdaczova",
+        "https://github.com/petratcheque"
+      ]
+    }
+</script>
+
 </html>
