--- a/index.html
+++ b/index.html
@@ -771,8 +771,10 @@
             
             <div class="philosophy">
                 <p><strong>Organization systems fail when they don't fit your brain.</strong></p>
-                <p>Most people copy someone else's organizing system—notes, tasks, ideas—without considering how their own mind works. Then they wonder why it feels wrong, why they abandon it, and blame themselves for being "disorganized."</p>
-                <p>The truth? There's no universal system. What works is <em>your</em> system—shaped by how you think, remember, focus and make decisions. Find that, and organization stops feeling like a chore.</p>
+                <p>Most people copy someone else's organizing system—notes, tasks, recipes—without considering how their own mind works. Then they wonder why it feels wrong, why they abandon it, and blame themselves for being "disorganized."</p>
+                <p>The truth? There's no universal system. What works is <em>your</em> system—shaped by how you think, remember, focus and make decisions.</p>
+                <p>Take cooking: most recipe sites organize around meal planning and complex recipes. Meal prep doesn't work for me. I love to cook fresh and in the moment.</p>
+                <p>So I built a system that organizes my kitchen knowledge around how I actually cook—ingredient-first, modular, spontaneous.</p>
                 <p>Welcome to <em>my</em> brain.</p>
             </div>
         </div>
